[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "bfpy"
version = "0.0.9"
authors = [{ name = 'UshioA', email = "shiosshio@outlook.com" }]
description = "A Brainfuck Jit Interpreter, with a simple frontend written in pygame"
requires-python = ">=3.5"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
keywords = ["brainfuck", 'jit']
dependencies = [
  "pygame",
  "peachpy"
]
[project.scripts]
bfpy = 'bfpy.bfpy:main'